# controllers/enterprise.go
@@ -156,15 +156,22 @@ func (c *EnterpriseController) EnterpriseLogin() {
 		c.Ctx.SetCookie("remember", "true")
 	}
 	// 设置Access-Control-Allow-Origin: * 允许跨域，暂定 "*" （不安全）
-	originHeader := c.Ctx.Input.Header("Origin")
-	if len(originHeader) != 0 {
-		c.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
-		c.Ctx.Output.Header("Access-Control-Allow-Credentials", "true")
-	}
+	// originHeader := c.Ctx.Input.Header("Origin")
+	c.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	c.SetSession("managerInfo", manager) // 登录成功，设置session
 	c.ServeJSON()                  // 传用户对象给前端
 }
-
+// @author: zyj
+// @Title Login
+// @Description 商家登陆
+// @Param enterpriseInfo body true account(string)+password(string)+accountType(string)为mail或者phone
+// @Success 200 {object} models.User Register successfully
+// @Failure 406 数据库查询报错，可能用户所填账号或密码错误
+// @Failure 400 信息内容或格式有误
+// @router /enterprise/login [options]
+func (c *EnterpriseController) checkAcross() {
+	c.Ctx.ResponseWriter.WriteHeader(200)
+}
 // @author: zyj
 // @Title changePW
 // @Description change password
