# swagger/swagger.yml
@@ -399,6 +399,26 @@ paths:
           description: 信息内容或格式有误
         "406":
           description: 数据库查询报错，可能用户所填账号或密码错误
+    options:
+      tags:
+      - api/user
+      description: 商家登陆
+      operationId: EnterpriseController.Login
+      parameters:
+      - in: body
+        name: enterpriseInfo
+        description: account(string)+password(string)+accountType(string)为mail或者phone
+        schema:
+          $ref: '#/definitions/true'
+      responses:
+        "200":
+          description: Register successfully
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: 信息内容或格式有误
+        "406":
+          description: 数据库查询报错，可能用户所填账号或密码错误
   /api/user/enterprise/newdemo:
     put:
       tags:
